service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diabetes-api-service
  labels:
    app: diabetes-api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb   # 👈 correct place
spec:
  selector:
    app: diabetes-api
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
