ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diabetes-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:323997748732:certificate/fe8d7e6e-7e47-46b8-bcf8-bc6a353b787a"
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: mlops.abhimishra-devops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diabetes-api-service
                port:
                  number: 80
